[metadata]
name = mite-cli
version = 0.0.1
description = mite cli tool

[options]
packages = find_namespace:
install_requires =
    docopt
    black
    flake8
package_dir =
    =src

[options.entry_points]
console_scripts =
    mite-cli = mite_cli.__main__:main

[options.packages.find]
where = src

zip_safe = no
