[metadata]
name = mite-cli
version = 0.0.1a
description = mite cli tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanlinnit-sky/mite-cli/
python_requires = >=3.8
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux


[options]
packages = find_namespace:
install_requires =
    docopt
    black
    flake8
    isort
    GitPython
package_dir =
    =src

[options.entry_points]
console_scripts =
    mite-cli = mite_cli.__main__:main

[options.packages.find]
where = src

zip_safe = no
